# haskell-cpu-features

./: CHANGELOG.md  README.md  cpu-features.cabal
.github/workflows/: build.yaml  release.yaml
app/: Main.hs
benchmark/: Benchmark.hs
cbits/: arm_poly.c  cpuid.c  hwprobe.c  sysctl.c  x86_clmul.c
script/: gen-arm-constraints.lua  gen-arm.lua  gen-riscv.lua  gen-x86-constraints.lua  gen-x86.lua
src/: Hwcap.hsc  Hwprobe.hsc
src/System/CPUFeatures/: Arm.hs  RISCV.hs  Util.hs  X86.hs
src/System/CPUFeatures/Arm/: Bool.hs  Constraint.hs  Intrinsics.hs  TypeBool.hs
src/System/CPUFeatures/Arm/Constraint/: Unsafe.hs
src/System/CPUFeatures/RISCV/: Bool.hs  Constraint.hs  TypeBool.hs
src/System/CPUFeatures/RISCV/Constraint/: Unsafe.hs
src/System/CPUFeatures/X86/: Bool.hs  Constraint.hs  Cpuid.hs  Intrinsics.hs  TypeBool.hs
src/System/CPUFeatures/X86/Constraint/: Unsafe.hs
