cabal-version:      3.0
name:               cpu-features
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  System.CPUFeatures.X86
                      System.CPUFeatures.X86.Cpuid
                      System.CPUFeatures.Arm
                      System.CPUFeatures.Arm.Intrinsics
                      System.CPUFeatures.Util
    -- other-modules:
    -- other-extensions:
    if os(darwin) && arch(aarch64)
      c-sources:      cbits/sysctl.c
    if os(linux) && arch(aarch64)
      other-modules:  Hwcap
    if arch(x86_64)
      c-sources:      cbits/cpuid.c
    if arch(aarch64)
      c-sources:      cbits/arm_poly.c
    build-depends:    base >=4.18.0.0 && <4.21
    hs-source-dirs:   src
    default-language: GHC2021

executable cpu-features
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.21,
        cpu-features

    hs-source-dirs:   app
    default-language: GHC2021

test-suite cpu-features-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18.0.0 && <4.21,
        cpu-features
